--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ main {
 
 button {
     background: white;
-    width: 100%;
+    width: 75%;
     margin-top: 1rem;
     padding: .6em;
     font-size: 1.6em;
@@ -43,11 +43,11 @@ button:hover {
 
 div#options {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 fieldset {
-    width: 44%;
+    width: 60%;
 }
 
 div.buttons {
