--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ main {
 
 button {
     background: white;
-    width: 75%;
+    width: 100%;
     margin-top: 1rem;
     padding: .6em;
     font-size: 1.6em;
@@ -41,32 +41,44 @@ button:hover {
     cursor: pointer;
 }
 
-div#options {
-    display: flex;
-    justify-content: space-around;
-}
-
-fieldset {
-    width: 60%;
+div#distance {
+    padding-bottom: 1.4em;
 }
 
 div.buttons {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
-legend {
-    font-size: 1.4em;
+div#price input {
+    display: none;
+}
+  
+div#price label {
+    display: inline-block;
+    width: 18%;
+    height: 50px;
+    color: #a0a0a0;
+    text-align: center;
+    border: 2px solid #a0a0a0;
+    border-radius: 10%;
+    line-height: 50px;
+    cursor: pointer
+  }
+  
+div#price input:checked + label{
+    color: #404040;
+    background: #8fdd98;
+    border: 2px solid #216c2a;
 }
 
-fieldset#price label {
-    color: #216c2a;
+div#price label {
     font-weight: 600;
 }
 
 @media only screen and (max-width: 600px) {
     main {
-        width: 93%;
+        width: 90%;
     }
 
     h1 {
