change layout of header

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-html, body, #container {
+html, body {
     height: 100%;
 }
 
@@ -19,20 +19,44 @@ body {
     margin: auto;
 }
 
-#container {
+.container {
     width: 50%;
 }
 
+header {
+    width: 100%;
+    padding: 0;
+}
+
+header div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
 h1 {
-    margin: 0;
-    padding: .5em;
-    font-size: 3em;
+    margin: .7rem 0;
+    padding: 0;
+    font-size: 2.4em;
     line-height: 1;
+    display: inline-flex;
+}
+
+nav {
+    display: inline-block;
+    line-height: 0;
+}
+
+nav a {
+    display: inline-block;
+    height: 2.4rem;
 }
 
 nav img {
-    height: 2.8rem;
-    margin: 0 .5rem 1rem .5rem;
+    /* padding: 0;
+    margin: 0; */
+    height: 100%;
 }
 
 main {
@@ -131,17 +155,27 @@ button:hover {
 }
 
 @media only screen and (max-width: 600px) {
-    #container {
+    .container {
         width: 100%;
     }
 
-    h1 {
-        font-size: 2.2em;
+    header {
+        background: #1d1d1d;
+        padding: .6rem 0 .7rem 0;
     }
 
-    nav img {
-        height: 2.8rem;
-        margin: 0;
+    header div {
+        justify-content: space-evenly;
+    }
+
+    h1 {
+        font-size: 2.4em;
+        color: #ffffff;
+        margin: 0 0 .6rem 0;
+    }
+
+    nav a {
+        height: 2.6rem;
     }
 
     main {
