reduce size of header elements

--- a/main.css
+++ b/main.css
@@ -36,6 +36,7 @@ header div {
 }
 
 h1 {
+    color: #000000;
     margin: .7rem 0;
     padding: 0;
     font-size: 2.4em;
@@ -161,7 +162,7 @@ button:hover {
 
     header {
         background: #1d1d1d;
-        padding: .6rem 0 .7rem 0;
+        padding: .7rem 0 .7rem 0;
     }
 
     header div {
@@ -169,13 +170,13 @@ button:hover {
     }
 
     h1 {
-        font-size: 2.4em;
+        font-size: 2.3em;
         color: #ffffff;
-        margin: 0 0 .6rem 0;
+        margin: 0 0 .4rem 0;
     }
 
     nav a {
-        height: 2.6rem;
+        height: 2.4rem;
     }
 
     main {
