change UI of distance and price inputs

--- a/ion.rangeSlider.css
+++ b/ion.rangeSlider.css
@@ -606,7 +606,7 @@ Build date: 2018-12-12 00:07:25
   background-color: #dedede;
 }
 .irs--round .irs-grid-text {
-  color: silver;
+  color: #404040;
   font-size: 13px;
 }
 .irs--square {
