--- a/main.css
+++ b/main.css
@@ -62,7 +62,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 50%;
+    height: 70%;
 }
 
 div#place {
@@ -73,6 +73,7 @@ div#place {
     background-size: cover;
     height: 100%;
     width: 100%;
+    margin: 0 0 1rem 0;
 }
 
 div#details {
@@ -96,8 +97,14 @@ div#details a {
     text-decoration-color: #eeeeee;
 }
 
+div#form {
+    width: 70%;
+}
+
 div#form h4 {
-    margin: 1rem 0 .5rem 0;
+    font-size: 1.2em;
+    text-align: left;
+    margin: .5rem 0 .2rem 0;
 }
 
 div#distance input {
@@ -116,29 +123,33 @@ div#price input {
 div#price label {
     display: inline-block;
     width: 20%;
-    height: 2.8rem;
-    color: #a0a0a0;
+    height: 2.5rem;
     text-align: center;
-    border: 2px solid #a0a0a0;
-    /* border-radius: .5rem; */
-    line-height: 2.8rem;
+    font-weight: 100;
+    border: 2px solid #45ac51;
+    border-right: none;
+    line-height: 2.5rem;
     cursor: pointer;
-  }
-  
-div#price input:checked + label{
-    color: #404040;
-    background: #8fdd98;
-    border: 2px solid #216c2a;
 }
 
-div#price label {
-    font-weight: 600;
+div#price label:first-of-type {
+    border-radius: .5rem 0 0 .5rem;
+}
+
+div#price label:last-of-type {
+    border-right: 2px solid #45ac51;
+    border-radius: 0 .5rem .5rem 0;
+}
+  
+div#price input:checked + label{
+    color: white;
+    background: #45ac51;
 }
 
 button {
     background: #ffffff;
     width: 100%;
-    margin-top: 1rem;
+    margin-top: 2rem;
     padding: .6em;
     font-size: 1.6em;
     color: #404040;
@@ -190,12 +201,12 @@ button:hover {
         margin: 0 auto;
     }
 
-    div#options {
-        justify-content: center;
-        flex-wrap: wrap;
+    div#form h4 {
+        font-size: 1rem;
     }
 
-    fieldset {
-        width: 100%;
+    button {
+        color: #ffffff;
+        background-color: #404040;
     }
 }
