change margin of mobile styling

--- a/main.css
+++ b/main.css
@@ -218,6 +218,10 @@ footer a {
         height: 64%;
     }
 
+    #distance, #price, button {
+        margin: .4rem 0 0 0;
+    }
+
     div#form {
         width: 90%;
         margin: 0 auto;
@@ -228,7 +232,7 @@ footer a {
     }
 
     button {
-        margin-bottom: .6rem;
+        margin-bottom: .4rem;
         padding: .6rem;
     }
 
