--- a/main.css
+++ b/main.css
@@ -241,7 +241,7 @@ footer a {
     h1 {
         font-size: 2.3em;
         color: #ffffff;
-        margin: 0 0 .4rem 0;
+        margin: .2rem 0 0 0;
     }
 
     nav a {
