--- a/main.css
+++ b/main.css
@@ -37,6 +37,10 @@ header div {
     align-items: center;
 }
 
+header img {
+    display: none;
+}
+
 h1 {
     color: #000000;
     margin: .7rem 0;
